--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,10 @@ on:
       - '*'
       - '!README.md'
       - '!.github/workflows/**'
+      
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  
 jobs:
   Code_Scanner:
     runs-on: ubuntu-latest
